openvidu-java-client: update deprecations and fix build warnings